alignment issue fixed

--- a/src/app/home/payment-page/payment-page.component.css
+++ b/src/app/home/payment-page/payment-page.component.css
@@ -150,6 +150,7 @@
   z-index: 1;
   font-size: 4rem;
   text-align: left;
+  margin-left: 16%;
 }
 
 .bank-right {
@@ -187,6 +188,7 @@
   .bank-left h3 {
     font-size: 2.5rem;
     text-align: center;
+    margin-left: 0 !important;
   }
 
   .bank-right {
@@ -211,6 +213,8 @@
   .bank-left h3 {
     font-size: 2rem;
     text-align: center;
+    margin-left: 0 !important;
+
   }
 
   .bank-right ul {
